frontend/css/style.scss
/* ... */
.rio-switcheroo-custom {
    // plain := accent := custom (read from CSS variables)

    // Rio locals
    --rio-local-plain-bg: var(--rio-local-custom-bg);

    --rio-local-accent-bg: var(--rio-local-custom-bg);
    --rio-local-accent-fg: var(--rio-local-custom-fg);

    // Text Styles
    --rio-local-heading1-color: var(--rio-local-custom-fg);
    --rio-local-heading1-background: 'none';
    --rio-local-heading1-background-clip: 'border-box';
    --rio-local-heading1-fill-color: 'transparent';

    --rio-local-heading2-color: var(--rio-local-custom-fg);
    --rio-local-heading2-background: 'none';
    --rio-local-heading2-background-clip: 'border-box';
    --rio-local-heading2-fill-color: 'transparent';

    --rio-local-heading3-color: var(--rio-local-custom-fg);
    --rio-local-heading3-background: 'none';
    --rio-local-heading3-background-clip: 'border-box';
    --rio-local-heading3-fill-color: 'transparent';

    --rio-local-text-color: var(--rio-local-custom-fg);
    --rio-local-text-background: 'none';
    --rio-local-text-background-clip: 'border-box';
    --rio-local-text-fill-color: 'transparent';

    // Material Design Web
    // TODO

    // Regular HTML
    color: var(--rio-local-custom-fg);
}

.rio-switcheroo-accent-to-plain {
    // plain := accent
    //
    // Allows components to access the accent color via the regular plain
    // variables. This can make sense for when components allow changing their
    // color via switcheroos. For example, if a button were to set it's
    // background to the "accent" background, this would show the secondary
    // color, even when applying the "danger" switcheroo.
    //
    // Using this switcheroo buttons can instead use the plain color and get
    // the desired result.

    // Rio locals
    --rio-local-plain-bg: var(--rio-local-accent-bg);
    --rio-local-text-color: var(--rio-local-accent-fg);

    // Material Design Web
    // TODO

    // Regular HTML
    color: var(--rio-local-accent-fg);
}

// "Placeholder element"/"content loading" animation
@keyframes content-loading {
    from {
        background-position: -100rem 0;
    }

    to {
        background-position: 0 0;
    }
}

.rio-content-loading {
    background-image: linear-gradient(
        to right,
        transparent 10%,
        var(--rio-local-accent-bg) 12%,
        transparent 14%
    );
    background-size: 100rem 5rem;
    animation: content-loading 3s linear infinite;
}

// For containers that want to ignore their child's size request. This is useful
// for
// 1. Elements with an aspect ratio, like images and videos
// 2. ScrollContainers
//
// (For things like images and videos, you may need to create a container element
// around the `<img>` or `<video>` element.)
// In both cases, the parent element doesn't care about the size of its child
// element. The child element simply receives all the space that's available,
// and can never force the parent element to grow.
.rio-zero-size-request-container {
    position: relative;
}

.rio-zero-size-request-container > * {
    position: absolute;
    width: 100%;
    height: 100%;
}

// General
a {
    color: var(--rio-local-accent-bg);
}

code {
    font-family: 'Roboto Mono', monospace;
}

// Make sure the whole GUI can scroll. The <html> element can scroll by
// default, so we'll just make sure the <body> uses all the available space.
//
// This is a little simpler than the `ScrollContainer` component, because our
// child element is always the `HighLevelRootComponent` from python, which
// doesn't have a `width` or `height` set.
html {
    background: var(--rio-global-background-bg);
}

body {
    margin: 0;
    padding: 0;

    font-family: var(--rio-global-text-font-name, Roboto, sans-serif);
}

// Wraps the user's root component
.rio-user-root-scroller {
    overflow: auto;
}

.rio-user-root-scroller > * {
    position: relative !important;
}

// All components
.rio-component {
    position: absolute;
}

// Fundamental Root Component
.rio-fundamental-root-component {
    position: relative !important;

    width: 100vw;
    height: 100vh;
}

// Row, Column & ListView
.rio-linear-child-container > * {
    position: relative !important;
}

.rio-list-view > .rio-linear-child-container > div > * {
    position: relative !important;
}

@keyframes barber-pole {
    from {
        background-position: 0 0;
    }

    to {
        background-position: 3rem 0rem;
    }
}

.rio-undefined-space {
    pointer-events: none;
    flex-grow: 1;

    background-image: linear-gradient(
        -45deg,
        var(--rio-global-warning-bg) 15%,
        transparent 15%,
        transparent 50%,
        var(--rio-global-warning-bg) 50%,
        var(--rio-global-warning-bg) 65%,
        transparent 65%
    );
    background-size: 3rem 3rem;
    animation: barber-pole 1s linear infinite;
}

.rio-row {
    pointer-events: none;
    display: flex;
    align-items: stretch;
}

.rio-row > .rio-linear-child-container {
    display: flex;
    align-items: stretch;
}

.rio-column {
    pointer-events: none;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.rio-column > .rio-linear-child-container {
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

// Grid
.rio-grid {
    pointer-events: none;
    display: grid;
}

// Text
.rio-text {
    pointer-events: auto;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    color: var(--rio-local-text-color);
}
/* ... */

